<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/et_round_outline"
    android:padding="10dp"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/product_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="193dp"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_product_image"
        tools:text="@string/product_name" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="8pt"
        app:layout_constraintStart_toStartOf="@id/tv_product_name"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        tools:text="@string/product_price" />

    <Button
        android:id="@+id/bt_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_round"
        android:text="@string/buy"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="8pt"
        app:layout_constraintTop_toBottomOf="@id/tv_product_price" />

</androidx.constraintlayout.widget.ConstraintLayout>