<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.profile.EditProfileActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            android:textSize="8pt"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/last_name"
            android:textSize="8pt"
            app:layout_constraintTop_toBottomOf="@id/et_first_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:textSize="8pt"
            app:layout_constraintTop_toBottomOf="@id/et_last_name" />

        <EditText
            android:id="@+id/et_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:hint="@string/phone_number"
            android:textSize="8pt"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <Button
            android:id="@+id/bt_edit"
            style="@style/RegularButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:text="Ubah"
            android:textSize="8pt"
            app:layout_constraintTop_toBottomOf="@id/et_phone_no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
