<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cart_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Keranjang kamu masih kosong"
            android:textColor="@color/black"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_items"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/cl_cart_checkout_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_shadow"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow"
            app:layout_constraintBottom_toTopOf="@id/cl_cart_checkout_bar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_cart_checkout_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_total_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_item"
                android:textColor="@color/black"
                android:textSize="7pt"
                app:layout_constraintBottom_toTopOf="@id/tv_total_price"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_item_price"
                android:textColor="@color/black"
                android:textSize="9pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/bt_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFC107"
                android:text="@string/checkout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
