<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_round_outline"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/product_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxWidth="193dp"
            android:maxLines="2"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="8pt"
            app:layout_constraintBottom_toBottomOf="@id/iv_product_image"
            app:layout_constraintStart_toEndOf="@id/iv_product_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_price"
            android:textColor="@color/black"
            android:textSize="8pt"
            app:layout_constraintStart_toEndOf="@id/iv_product_image"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <ImageButton
            android:id="@+id/bt_dec_qty"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_remove_black_24dp"
            app:layout_constraintStart_toEndOf="@id/iv_product_image"
            app:layout_constraintTop_toBottomOf="@id/tv_product_price" />

        <EditText
            android:id="@+id/et_qty"
            android:layout_width="65dp"
            android:layout_height="33dp"
            android:background="@drawable/et_round_outline"
            android:inputType="number"
            android:text="1"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/bt_dec_qty"
            app:layout_constraintEnd_toStartOf="@id/bt_inc_qty"
            app:layout_constraintStart_toEndOf="@id/bt_dec_qty"
            app:layout_constraintTop_toTopOf="@id/bt_inc_qty" />

        <ImageButton
            android:id="@+id/bt_inc_qty"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_black_24dp"
            app:layout_constraintStart_toEndOf="@id/et_qty"
            app:layout_constraintTop_toBottomOf="@id/tv_product_price" />

        <ImageButton
            android:id="@+id/bt_remove_from_cart"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_delete_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

