<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/bt_add_to_cart"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_product_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ProgressBar
                        android:id="@+id/pb_load_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_name"
                        android:textColor="@color/black"
                        android:textSize="11pt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_product_image"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/product_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

                    <TextView
                        android:id="@+id/tv_product_price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:text="@string/price_label"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_product_image" />

                    <TextView
                        android:id="@+id/tv_product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/product_price"
                        android:textColor="#FFFFC107"
                        android:textSize="11pt"
                        app:layout_constraintStart_toEndOf="@id/tv_product_price_label"
                        app:layout_constraintTop_toBottomOf="@id/iv_product_image" />

                    <TextView
                        android:id="@+id/tv_qty_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/qty"
                        android:textColor="@color/black"
                        android:textSize="7pt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_product_price_label" />

                    <ImageButton
                        android:id="@+id/bt_dec_qty"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_remove_black_24dp"
                        app:layout_constraintStart_toEndOf="@id/tv_qty_label"
                        app:layout_constraintTop_toBottomOf="@id/tv_product_price_label" />

                    <EditText
                        android:id="@+id/et_qty"
                        android:layout_width="65dp"
                        android:layout_height="33dp"
                        android:background="@drawable/et_round_outline"
                        android:inputType="number"
                        android:text="1"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="@id/bt_dec_qty"
                        app:layout_constraintEnd_toStartOf="@id/bt_inc_qty"
                        app:layout_constraintStart_toEndOf="@id/bt_dec_qty"
                        app:layout_constraintTop_toTopOf="@id/bt_inc_qty" />

                    <ImageButton
                        android:id="@+id/bt_inc_qty"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_add_black_24dp"
                        app:layout_constraintStart_toEndOf="@id/et_qty"
                        app:layout_constraintTop_toBottomOf="@id/tv_product_price_label" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_product_content"
                    app:tabIndicatorColor="#FFFFC107"
                    app:tabTextColor="@color/black">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Deskripsi" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Diskusi" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ulasan" />

                </com.google.android.material.tabs.TabLayout>

                <FrameLayout
                    android:id="@+id/fl_product_detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/bt_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="#FFFFC107"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="9pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
